--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.3.1",
-    "ng2-validation": "^4.2.0",
+    "ng2-table": "^1.3.2",
+    "ng2-validation": "^3.9.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
