--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    //"baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -16,13 +16,17 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "strictNullChecks":false,
+    "strictNullChecks": false,
     "target": "es2020",
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
     ],
+    "baseUrl": "./src",
+    "paths": {
+      "shared/*": ["app/shared/*"]
+    },
     "skipLibCheck": true
   },
   "angularCompilerOptions": {
